[metadata]
name = django_goldenpay
version = 0.0.1
author = Atakhan Rahimli
author_email = author@example.com
description = Make Payments by GoldenPay
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arahimli/django_goldenpay
project_urls =
    Bug Tracker = https://github.com/arahimli/django_goldenpay/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = django_goldenpay
packages = find:
python_requires = >=3.6

[options.packages.find]
where = django_goldenpay